--- a/editor-style.css
+++ b/editor-style.css
@@ -2311,6 +2311,33 @@ legend {
         .widget_calendar #calendar_wrap #wp-calendar tfoot td#next {
           text-align: right; }
 
+.sticky .entry-title {
+  position: relative; }
+  .sticky .entry-title a:before {
+    color: black;
+    font-family: 'Genericons';
+    content: '\f308';
+    position: absolute;
+    top: 10px;
+    left: -70px;
+    opacity: .5;
+    height: 48px;
+    width: 48px;
+    font-size: 26px;
+    padding: 5px;
+    -webkit-border-radius: 70px;
+    border-radius: 70px;
+    line-height: 1.95;
+    text-align: center; }
+    @media only screen and (max-width: 40em) {
+      .sticky .entry-title a:before {
+        top: 8px;
+        left: -45px;
+        height: 28px;
+        width: 34px;
+        font-size: 22px;
+        padding: 0; } }
+
 .no-results,
 .not-found {
   padding: 1.5em;
@@ -2549,6 +2576,21 @@ article.format-link {
 
 .comment-content a {
   word-wrap: break-word; }
+
+.bypostauthor {
+  display: block;
+  padding: 40px 40px 0 50px;
+  margin-bottom: 60px;
+  margin-right: 0;
+  border: 3px solid rgba(0, 0, 0, 0.2); }
+  @media only screen and (max-width: 40em) {
+    .bypostauthor {
+      padding: 20px 20px 0 30px; } }
+  .bypostauthor .comment-body {
+    padding-left: 50px; }
+    @media only screen and (max-width: 40em) {
+      .bypostauthor .comment-body {
+        padding-left: 30px; } }
 
 .comments-area {
   padding: 1.5em;
