--- a/.dev/sass/partials/_header.scss
+++ b/.dev/sass/partials/_header.scss
@@ -170,8 +170,7 @@ html {
 	@include clearfix;
 
 	background: rgba(0, 0, 0, 0.1);
-	background-size: 50%;
-	background-position: top left;
+	background-position: top center;
 	background-repeat: no-repeat;
 
 	.hero-inner {
