--- a/style.css
+++ b/style.css
@@ -3548,9 +3548,7 @@ html {
 
 .hero {
   background: rgba(0, 0, 0, 0.1);
-  -webkit-background-size: 50% 50%;
-  background-size: 50%;
-  background-position: top left;
+  background-position: top center;
   background-repeat: no-repeat; }
   .hero:before, .hero:after {
     content: " ";
