--- a/style-rtl.css
+++ b/style-rtl.css
@@ -3485,7 +3485,7 @@ body {
       width: 100%;
       background: #fff;
       z-index: 1;
-      max-height: 86px; } }
+      min-height: 86px; } }
 
 .featured-content .entry-header {
   -webkit-background-size: cover;
