--- a/style.css
+++ b/style.css
@@ -87,11 +87,11 @@ img {
 .right {
   float: right !important; }
 
-.clearfix:before, .entry-meta:before, .social-menu:before, .clearfix:after, .entry-meta:after, .social-menu:after {
+.clearfix:before, .entry-meta:before, .clearfix:after, .entry-meta:after {
   content: " ";
   display: table; }
 
-.clearfix:after, .entry-meta:after, .social-menu:after {
+.clearfix:after, .entry-meta:after {
   clear: both; }
 
 .hide {
@@ -167,11 +167,11 @@ img {
 .right {
   float: right !important; }
 
-.clearfix:before, .entry-meta:before, .social-menu:before, .clearfix:after, .entry-meta:after, .social-menu:after {
+.clearfix:before, .entry-meta:before, .clearfix:after, .entry-meta:after {
   content: " ";
   display: table; }
 
-.clearfix:after, .entry-meta:after, .social-menu:after {
+.clearfix:after, .entry-meta:after {
   clear: both; }
 
 .hide {
@@ -1681,11 +1681,11 @@ img {
 .right {
   float: right !important; }
 
-.clearfix:before, .entry-meta:before, .social-menu:before, .clearfix:after, .entry-meta:after, .social-menu:after {
+.clearfix:before, .entry-meta:before, .clearfix:after, .entry-meta:after {
   content: " ";
   display: table; }
 
-.clearfix:after, .entry-meta:after, .social-menu:after {
+.clearfix:after, .entry-meta:after {
   clear: both; }
 
 .hide {
@@ -3667,55 +3667,33 @@ html {
   .site-info-wrapper .site-info {
     padding: 2.5rem 2rem;
     overflow: hidden; }
-    .site-info-wrapper .site-info .social-menu {
-      margin-top: 15px; }
-      @media screen and (min-width: 769px) {
-        .site-info-wrapper .site-info .social-menu {
-          float: right;
-          width: 50%;
-          margin: 0; } }
-      .site-info-wrapper .site-info .social-menu ul {
-        text-align: center;
-        margin-right: 0; }
-        .site-info-wrapper .site-info .social-menu ul li:last-child a {
-          margin-right: 0; }
-        @media screen and (min-width: 769px) {
-          .site-info-wrapper .site-info .social-menu ul {
-            text-align: right; } }
-      .site-info-wrapper .site-info .social-menu li {
-        padding: 0; }
-      .site-info-wrapper .site-info .social-menu a {
-        margin-right: 15px; }
-        .site-info-wrapper .site-info .social-menu a:before {
-          font-size: 36px;
-          padding: 0;
-          width: 36px;
-          height: 36px; }
 
-.footer-menu {
-  float: left; }
-  .footer-menu ul {
-    list-style: none;
-    margin: 0 0 5px;
-    padding: 0;
-    text-align: center; }
-    @media only screen and (min-width: 40.063em) {
-      .footer-menu ul {
+@media only screen and (min-width: 40.063em) {
+  .footer-menu {
+    float: left; } }
+
+.footer-menu ul {
+  list-style: none;
+  margin: 0 0 5px;
+  padding: 0;
+  text-align: center; }
+  @media only screen and (min-width: 40.063em) {
+    .footer-menu ul {
+      text-align: left; } }
+  .footer-menu ul li {
+    display: inline-block;
+    font-size: .875rem;
+    font-weight: 600;
+    margin: 0 10px;
+    text-align: center;
+    text-transform: uppercase; }
+    .footer-menu ul li:first-of-type {
+      margin-left: 0; }
+    @media only screen and (min-width: 568px) {
+      .footer-menu ul li {
         text-align: left; } }
-    .footer-menu ul li {
-      display: inline-block;
-      font-size: .875rem;
-      font-weight: 600;
-      margin: 0 10px;
-      text-align: center;
-      text-transform: uppercase; }
-      .footer-menu ul li:first-of-type {
-        margin-left: 0; }
-      @media only screen and (min-width: 568px) {
-        .footer-menu ul li {
-          text-align: left; } }
-      .footer-menu ul li a {
-        color: #181818; }
+    .footer-menu ul li a {
+      color: #181818; }
 
 .featured-content {
   -webkit-background-size: cover;
@@ -4187,107 +4165,109 @@ html {
 .genericon-leftarrow:before {
   content: '\f503'; }
 
-.social-menu a {
-  font-size: 0;
-  text-indent: -9999em;
-  border: 0;
-  width: 32px;
-  height: 32px;
-  -webkit-transition: 200ms opacity;
-  transition: 200ms opacity;
-  color: #fff; }
-  .social-menu a:before {
-    -webkit-font-smoothing: subpixel-antialiased;
-    padding: 7px;
-    display: inline-block;
-    font-size: 18px; }
-  .social-menu a:hover {
-    opacity: 0.7; }
-
-.social-menu a[href*="wordpress.org"]:before,
-.social-menu a[href*="wordpress.com"]:before {
-  content: '\f205'; }
-  .social-menu a[href*="wordpress.org"]:before:hover,
-  .social-menu a[href*="wordpress.com"]:before:hover {
-    color: #21759b; }
-
-.social-menu a[href*="facebook.com"]:before {
-  content: '\f203'; }
-  .social-menu a[href*="facebook.com"]:before:hover {
-    color: #3b5998; }
-
-.social-menu a[href*="twitter.com"]:before {
-  content: '\f202'; }
-  .social-menu a[href*="twitter.com"]:before:hover {
-    color: #33ccff; }
-
-.social-menu a[href*="dribbble.com"]:before {
-  content: '\f201'; }
-  .social-menu a[href*="dribbble.com"]:before:hover {
-    color: #ea4c89; }
-
-.social-menu a[href*="plus.google.com"]:before {
-  content: '\f206'; }
-  .social-menu a[href*="plus.google.com"]:before:hover {
-    color: #dd4b39; }
-
-.social-menu a[href*="pinterest.com"]:before {
-  content: '\f210'; }
-  .social-menu a[href*="pinterest.com"]:before:hover {
-    color: #c8232c; }
-
-.social-menu a[href*="github.com"]:before {
-  content: '\f200'; }
-  .social-menu a[href*="github.com"]:before:hover {
-    color: #171515; }
-
-.social-menu a[href*="tumblr.com"]:before {
-  content: '\f214'; }
-  .social-menu a[href*="tumblr.com"]:before:hover {
-    color: #34526f; }
-
-.social-menu a[href*="youtube.com"]:before {
-  content: '\f213'; }
-  .social-menu a[href*="youtube.com"]:before:hover {
-    color: #c4302b; }
-
-.social-menu a[href*="flickr.com"]:before {
-  content: '\f211'; }
-  .social-menu a[href*="flickr.com"]:before:hover {
-    color: #ff0084; }
-
-.social-menu a[href*="vimeo.com"]:before {
-  content: '\f212'; }
-  .social-menu a[href*="vimeo.com"]:before:hover {
-    color: #1AB7EA; }
-
-.social-menu a[href*="instagram.com"]:before {
-  content: '\f215'; }
-  .social-menu a[href*="instagram.com"]:before:hover {
-    color: #3f729b; }
-
-.social-menu a[href*="codepen.io"]:before {
-  content: '\f216'; }
-  .social-menu a[href*="codepen.io"]:before:hover {
-    color: #000; }
-
-.social-menu a[href*="linkedin.com"]:before {
-  content: '\f208'; }
-  .social-menu a[href*="linkedin.com"]:before:hover {
-    color: #0e76a8; }
-
-.social-menu ul {
-  list-style: none;
+.social-menu {
   text-align: center;
-  margin: 0 1.25em 0 0;
-  margin: 0 1.25rem 0 0;
-  font-size: 0;
-  text-align: right; }
-  .social-menu ul li {
-    display: inline-block;
-    position: relative;
-    padding: 0;
-    margin: 3px; }
+  padding: 20px 0; }
+  @media only screen and (min-width: 40.063em) {
+    .social-menu {
+      text-align: right;
+      float: right;
+      width: 50%;
+      padding: 0 0 20px; } }
+  .social-menu a {
+    font-size: 0;
+    text-indent: -9999em;
+    border: 0;
+    width: 32px;
+    height: 32px;
+    -webkit-transition: 200ms opacity;
+    transition: 200ms opacity;
+    color: #fff;
+    margin-right: 8px;
+    text-align: center;
+    line-height: 32px;
+    -webkit-border-radius: 32px;
+    border-radius: 32px; }
+    .social-menu a:before {
+      padding: 0;
+      width: 32px;
+      height: 32px;
+      font-size: 16px;
+      -webkit-font-smoothing: subpixel-antialiased;
+      display: inline-block; }
+    .social-menu a:hover {
+      opacity: 0.7; }
+  .social-menu a[href*="wordpress.org"]:before,
+  .social-menu a[href*="wordpress.com"]:before {
+    content: '\f205'; }
+    .social-menu a[href*="wordpress.org"]:before:hover,
+    .social-menu a[href*="wordpress.com"]:before:hover {
+      color: #21759b; }
+  .social-menu a[href*="facebook.com"]:before {
+    content: '\f203'; }
+    .social-menu a[href*="facebook.com"]:before:hover {
+      color: #3b5998; }
+  .social-menu a[href*="twitter.com"]:before {
+    content: '\f202'; }
+    .social-menu a[href*="twitter.com"]:before:hover {
+      color: #33ccff; }
+  .social-menu a[href*="dribbble.com"]:before {
+    content: '\f201'; }
+    .social-menu a[href*="dribbble.com"]:before:hover {
+      color: #ea4c89; }
+  .social-menu a[href*="plus.google.com"]:before {
+    content: '\f206'; }
+    .social-menu a[href*="plus.google.com"]:before:hover {
+      color: #dd4b39; }
+  .social-menu a[href*="pinterest.com"]:before {
+    content: '\f210'; }
+    .social-menu a[href*="pinterest.com"]:before:hover {
+      color: #c8232c; }
+  .social-menu a[href*="github.com"]:before {
+    content: '\f200'; }
+    .social-menu a[href*="github.com"]:before:hover {
+      color: #171515; }
+  .social-menu a[href*="tumblr.com"]:before {
+    content: '\f214'; }
+    .social-menu a[href*="tumblr.com"]:before:hover {
+      color: #34526f; }
+  .social-menu a[href*="youtube.com"]:before {
+    content: '\f213'; }
+    .social-menu a[href*="youtube.com"]:before:hover {
+      color: #c4302b; }
+  .social-menu a[href*="flickr.com"]:before {
+    content: '\f211'; }
+    .social-menu a[href*="flickr.com"]:before:hover {
+      color: #ff0084; }
+  .social-menu a[href*="vimeo.com"]:before {
+    content: '\f212'; }
+    .social-menu a[href*="vimeo.com"]:before:hover {
+      color: #1AB7EA; }
+  .social-menu a[href*="instagram.com"]:before {
+    content: '\f215'; }
+    .social-menu a[href*="instagram.com"]:before:hover {
+      color: #3f729b; }
+  .social-menu a[href*="codepen.io"]:before {
+    content: '\f216'; }
+    .social-menu a[href*="codepen.io"]:before:hover {
+      color: #000; }
+  .social-menu a[href*="linkedin.com"]:before {
+    content: '\f208'; }
+    .social-menu a[href*="linkedin.com"]:before:hover {
+      color: #0e76a8; }
+  .social-menu ul {
+    list-style: none;
+    text-align: center;
+    margin: 0 1.25em 0 0;
+    margin: 0 1.25rem 0 0;
+    font-size: 0; }
+    .social-menu ul li {
+      display: inline-block;
+      position: relative;
+      padding: 0;
+      margin: 3px; }
+    .social-menu ul li:last-child a {
+      margin-right: 0; }
 
 #wpstats {
   display: none; }
