Support fixed width

--- a/.dev/sass/partials/_layout.scss
+++ b/.dev/sass/partials/_layout.scss
@@ -1,5 +1,4 @@
-#content{
-	@extend .row;
+.site-content {
 	padding: 2.25rem 0;
 
 	body.layout-one-column-full & {
@@ -9,18 +8,21 @@
 	}
 
 	body.page-template-page-builder &,
-	body.page-template-page-builder-no-header &{
+	body.page-template-page-builder-no-header & {
 		width: 100%;
 		max-width: 100%;
 		padding: 0;
 	}
 }
 
-#primary{
+.content-area {
 	@extend .columns;
+
 	@extend .large-8;
+
 	float: none;
 	margin: 0 auto;
+
 	body.layout-one-column-full & {
 		margin: 0;
 		padding: 0;
@@ -28,31 +30,31 @@
 		width: 100%;
 	}
 
-	body.layout-two-column-reversed &{
+	body.layout-two-column-reversed & {
 		@extend .large-push-4;
 	}
 
 	body.layout-one-column-wide &,
-	body.layout-one-column-narrow &{
+	body.layout-one-column-narrow & {
 		@extend .large-12;
 	}
 
 	body.layout-three-column-default &,
 	body.layout-three-column-reversed &,
-	body.layout-three-column-center &{
+	body.layout-three-column-center & {
 		@extend .large-6;
 	}
 
-	body.layout-three-column-center &{
+	body.layout-three-column-center & {
 		@extend .large-push-3;
 	}
 
-	body.layout-three-column-reversed &{
+	body.layout-three-column-reversed & {
 		@extend .large-push-6;
 	}
 
 	body.page-template-page-builder &,
-	body.page-template-page-builder-no-header &{
+	body.page-template-page-builder-no-header & {
 		width: 100%;
 		max-width: 100%;
 		padding: 0;
@@ -60,63 +62,53 @@
 	}
 }
 
-#secondary{
+#secondary {
 	@extend .large-4;
+
 	@extend .columns;
 
-	body.layout-two-column-reversed &{
+	body.layout-two-column-reversed & {
 		@extend .large-pull-8;
 	}
 
 	body.layout-one-column-wide &,
-	body.layout-one-column-narrow &{
+	body.layout-one-column-narrow & {
 		@extend .large-12;
 	}
 
 	body.layout-three-column-default &,
 	body.layout-three-column-reversed &,
-	body.layout-three-column-center &{
+	body.layout-three-column-center & {
 		@extend .large-3;
 	}
 
 	body.layout-three-column-center &,
-	body.layout-three-column-reversed &{
+	body.layout-three-column-reversed & {
 		@extend .large-pull-6;
 	}
 }
 
-#tertiary{
+#tertiary {
 	@extend .large-3;
+
 	@extend .columns;
 
-	body.layout-three-column-reversed &{
+	body.layout-three-column-reversed & {
 		@extend .large-pull-6;
 	}
 }
 
-.site-branding-container{
-	@extend .row;
-}
-
-.site-branding{
-	@extend .large-12;
-	@extend .columns;
-}
-
-.site-footer{
-	.site-footer-inner{
+.site-header,
+.site-content,
+.site-footer-inner,
+.site-info {
+	body:not(.no-max-width) & {
 		@extend .row;
-	}
-
-	.site-info{
-		@extend .large-12;
-		@extend .large-centered;
-		@extend .columns;
 	}
 }
 
 body.layout-one-column-narrow {
-	#content{
+	.site-content {
 		max-width: 50em;
 	}
 }
