--- a/.dev/sass/partials/_footer.scss
+++ b/.dev/sass/partials/_footer.scss
@@ -126,51 +126,24 @@ $site-footer-info-anchor-color-hover: contrast-color($site-footer-info-backgroun
 		text-align: center;
 		font-size: .9em;
 
-		.menu {
-			display: none;
-			padding: 0;
-			margin: 0 0 10px 0;
-			list-style: none;
-
-			li {
-				display: inline;
-				padding-right: 30px;
-
-				a {
-					text-transform: uppercase;
-					font-weight: 700;
-					color: #181818;
-					font-size: emCalc(14);
-				}
-			}
-		}
-
-		@media screen and (min-width: 769px) {
+		@media #{$large-up} {
 			text-align: left;
 			float: left;
 			width: 50%;
-
-			.menu {
-				display: block;
-			}
 		}
 	}
 
 	.site-info {
 		padding: 2.5rem 2rem;
-		overflow: hidden;
 	}
 
-	.site-info-inner {
-		@extend .large-12;
-
-		@extend .columns;
+	.site-info-inner:after {
+		@extend .clearfix;
 	}
 }
 
 .footer-menu {
-
-	@media #{$medium-up}{
+	@media #{$large-up} {
 		float: left;
 	}
 
@@ -180,7 +153,7 @@ $site-footer-info-anchor-color-hover: contrast-color($site-footer-info-backgroun
 		padding: 0;
 		text-align: center;
 
-		@media #{$medium-up} {
+		@media #{$large-up} {
 			text-align: left;
 		}
 
