--- a/.dev/sass/partials/_social.scss
+++ b/.dev/sass/partials/_social.scss
@@ -2,10 +2,9 @@
 	text-align: center;
 	padding: 20px 0;
 
-	@media #{$medium-up} {
+	@media #{$large-up} {
 		text-align: right;
 		float: right;
-		width: 50%;
 		padding: 0 0 20px;
 	}
 
