--- a/editor-style.css
+++ b/editor-style.css
@@ -2354,15 +2354,16 @@ legend {
     margin-bottom: 1em; }
 
 .hentry {
-  padding: 1.5em;
-  padding: 1.5rem;
-  margin: 0 0 1.5em;
-  margin: 0 0 1.5rem;
   background: none; }
-  @media only screen and (min-width: 40.063em) {
-    .hentry {
-      padding: 2.5em 3.5em;
-      padding: 2.5rem 3.5rem; } }
+  body:not(.fl-builder) .hentry {
+    padding: 1.5em;
+    padding: 1.5rem;
+    margin: 0 0 1.5em;
+    margin: 0 0 1.5rem; }
+    @media only screen and (min-width: 40.063em) {
+      body:not(.fl-builder) .hentry {
+        padding: 2.5em 3.5em;
+        padding: 2.5rem 3.5rem; } }
   .hentry .attachment-primer-featured {
     width: 100%;
     height: auto; }
@@ -2479,11 +2480,8 @@ legend {
 
 .entry-meta {
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-  line-height: 1.4em;
   line-height: 1.4rem;
-  margin-bottom: 1em;
   margin-bottom: 1rem;
-  padding-bottom: 1em;
   padding-bottom: 1rem;
   font-size: .9em;
   font-family: "Roboto", sans-serif; }
