--- a/.dev/sass/style.scss
+++ b/.dev/sass/style.scss
@@ -1,6 +1,6 @@
 /**
  * Theme Name: Mins
- * Theme URI: https://wordpress.org/themes/mins
+ * Theme URI: https://github.com/godaddy/wp-mins-theme
  * Author: GoDaddy
  * Author URI: https://www.godaddy.com/
  * Description: Mins is a Primer child theme with a minimal design.
