--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /**
  * Theme Name: Mins
- * Theme URI: https://wordpress.org/themes/mins
+ * Theme URI: https://github.com/godaddy/wp-mins-theme
  * Author: GoDaddy
  * Author URI: https://www.godaddy.com/
  * Description: Mins is a Primer child theme with a minimal design.
