--- a/.dev/sass/partials/_header.scss
+++ b/.dev/sass/partials/_header.scss
@@ -171,7 +171,8 @@ html {
 	@include clearfix;
 
 	background: rgba(0, 0, 0, 0.1);
-	background-position: top center;
+	background-size: cover;
+	background-position: center top;
 	background-repeat: no-repeat;
 
 	.hero-inner {
