--- a/.dev/sass/partials/_posts-and-pages.scss
+++ b/.dev/sass/partials/_posts-and-pages.scss
@@ -207,7 +207,20 @@
 	font-size: .9em;
 	font-family: $sans-font-family;
 
-	@extend .clearfix;
+	@include clearfix;
+
+	> span {
+		margin-right: 1em;
+
+		&:last-child {
+			margin-right: 0;
+		}
+
+		@media #{$small-only} {
+			display: block;
+			margin-right: 0;
+		}
+	}
 
 	i {
 		vertical-align: middle;
