--- a/style-rtl.css
+++ b/style-rtl.css
@@ -3331,8 +3331,9 @@ object {
     padding: 0;
     float: none; }
 
-body.layout-one-column-narrow .site-content {
-  max-width: 50em; }
+@media only screen and (min-width: 40.063em) {
+  body.layout-one-column-narrow #content {
+    max-width: 50em; } }
 
 body {
   background: #f4f4f4; }
