--- a/.dev/sass/partials/_menus.scss
+++ b/.dev/sass/partials/_menus.scss
@@ -241,6 +241,10 @@ body.no-max-width .main-navigation {
 /**
  * Post navigation
  */
+.post-navigation {
+	padding: 0 3.5rem;
+}
+
 .navigation {
 	@extend .row;
 
@@ -251,7 +255,6 @@ body.no-max-width .main-navigation {
 
 		margin-bottom: 1em;
 		margin-bottom: 1rem;
-		padding: 0;
 	}
 }
 
