--- a/.dev/sass/partials/_menus.scss
+++ b/.dev/sass/partials/_menus.scss
@@ -243,6 +243,10 @@ body.no-max-width .main-navigation {
  */
 .post-navigation {
 	padding: 0 3.5rem;
+
+	@media #{$small-only} {
+		padding: 0 1.5rem;
+	}
 }
 
 .navigation {
