--- a/style-rtl.css
+++ b/style-rtl.css
@@ -2465,6 +2465,9 @@ body.no-max-width .main-navigation {
  */
 .post-navigation {
   padding: 0 3.5rem; }
+  @media only screen and (max-width: 40em) {
+    .post-navigation {
+      padding: 0 1.5rem; } }
 
 .navigation .nav-links {
   margin-bottom: 1em;
