--- a/style.css
+++ b/style.css
@@ -2280,6 +2280,9 @@ legend {
   letter-spacing: 1px;
   padding: 0 15px; }
 
+a {
+  color: #62b6cb; }
+
 .main-navigation-container {
   float: right; }
   @media only screen and (max-width: 40em) {
@@ -3368,7 +3371,8 @@ body {
   @media only screen and (max-width: 40em) {
     .site-title-wrapper {
       float: none;
-      padding: 20px; }
+      padding: 20px;
+      max-width: 75%; }
       .site-title-wrapper:before, .site-title-wrapper:after {
         content: " ";
         display: table; }
