--- a/.dev/sass/partials/_forms.scss
+++ b/.dev/sass/partials/_forms.scss
@@ -38,6 +38,10 @@ input[type="submit"] {
 		left: 5px;
 		position: relative;
 		transition: .2s all;
+
+		.fl-lightbox & {
+			content: '';
+		}
 	}
 	
 	&:hover {
