Update widget styles, in .hero

--- a/.dev/sass/partials/_widgets.scss
+++ b/.dev/sass/partials/_widgets.scss
@@ -257,3 +257,9 @@ $widget-bg: #fff !default;
 		}
 	}
 }
+
+.hero .widget.widget_text p {
+	font-size: 1.4rem;
+	line-height: 1.4;
+	padding: 0;
+}
