Update styles for woocommerce compat.

--- a/.dev/sass/partials/_header.scss
+++ b/.dev/sass/partials/_header.scss
@@ -64,6 +64,7 @@ body {
 	background-color: $header-bg-color;
 	letter-spacing: -.01em;
 	padding: 0;
+	position: relative;
 
 	@media #{$small-only} {
 		width: 100%;
