--- a/.dev/sass/compat/woocommerce.scss
+++ b/.dev/sass/compat/woocommerce.scss
@@ -1,3 +1,12 @@
+#woocommerce-cart-menu-item {
+
+	&.empty-cart .widget_shopping_cart {
+		padding-top: 1em;
+	}
+
+
+}
+
 .main-navigation .menu-item-object-cart:hover a {
 	background: transparent;
 }
