--- a/style.css
+++ b/style.css
@@ -4229,7 +4229,9 @@ ul.site-header-cart.menu {
   padding: 0 1rem; }
   .widget_shopping_cart ul.product_list_widget {
     position: relative !important;
-    left: 0; }
+    left: 0;
+    max-height: 250px;
+    overflow-y: auto; }
   .widget_shopping_cart p.buttons,
   .widget_shopping_cart .total,
   .widget_shopping_cart .product_list_widget {
