Update on sale styles, update color array, remove arrow from woocommerce product 'add to cart' links.

--- a/.dev/sass/partials/_forms.scss
+++ b/.dev/sass/partials/_forms.scss
@@ -43,11 +43,11 @@ input[type="submit"] {
 			content: '';
 		}
 	}
-	
+
 	&:hover {
-		background: transparent !important;
+		background: transparent;
 	}
-	
+
 	&:hover:after {
 		left: 8px;
 		transition: .2s all;
