--- a/.dev/sass/compat/woocommerce.scss
+++ b/.dev/sass/compat/woocommerce.scss
@@ -1,3 +1,7 @@
+ul.products a.button:after {
+	display: none;
+}
+
 .main-navigation .menu-item-object-cart:hover a {
 	background: transparent;
 }
@@ -114,6 +118,32 @@ ul.site-header-cart.menu {
 		&:hover {
 			background: red;
 		}
+	}
+
+}
+
+body.post-type-archive,
+body.single-product {
+
+	/* On Sale Badge */
+	span.onsale,
+	ul.products li.product .onsale {
+		padding: 2px 8px;
+		border-radius: 0;
+		margin: 0;
+		min-height: auto;
+		min-width: auto;
+		line-height: inherit;
+	}
+
+}
+
+body.single-product {
+
+	span.onsale {
+		padding: 3px 18px;
+		top: 0;
+		left: 0;
 	}
 
 }
