Update Primer hook priorities  (#28)
* Add priorities where needed for Primer compatibility.
* Update WooCommerce styles, introduce new cart menu item.
* Tweak responsive styles.
* Fix :active/:focus states on buttons, fix arrows being appended onto customizer direct manipulation buttons
* Prevent i10n WooCommerce button overlaps
* Fix `.add_to_cart_button` hover state set to transparent
* Add pagination styles, makes issue #30 irrelevant

--- a/.dev/sass/partials/_header.scss
+++ b/.dev/sass/partials/_header.scss
@@ -64,6 +64,7 @@ body {
 	background-color: $header-bg-color;
 	letter-spacing: -.01em;
 	padding: 0;
+	position: relative;
 
 	@media #{$small-only} {
 		width: 100%;
@@ -182,6 +183,11 @@ html {
 		width: 50%;
 		float: right;
 		padding: 4%;
+
+		.widget a.button:hover {
+			background: transparent;
+		}
+
 	}
 
 	@media screen and (max-width: 900px) {
