Video header styles (#31)
* Build in support for video headers

--- a/.dev/sass/partials/_header.scss
+++ b/.dev/sass/partials/_header.scss
@@ -66,6 +66,8 @@ body {
 	padding: 0;
 	position: relative;
 
+	@import "video-header";
+
 	@media #{$small-only} {
 		width: 100%;
 		background: #fff;
@@ -186,6 +188,10 @@ html {
 
 		.widget a.button:hover {
 			background: transparent;
+		}
+
+		#wp-custom-header img {
+			display: none;
 		}
 
 	}
