--- a/.dev/sass/partials/_forms.scss
+++ b/.dev/sass/partials/_forms.scss
@@ -11,9 +11,9 @@ textarea {
 	font-family: $sans-font-family;
 }
 
-button:not(.single_add_to_cart_button):not(.nf-element),
-a.button:not(.wc-forward):not(.add_to_cart_button),
-a.button:visited:not(.wc-forward):not(.add_to_cart_button),
+button:not(.single_add_to_cart_button):not( .customize-partial-edit-shortcut-button ),
+a.button:not(.wc-forward):not(.add_to_cart_button):not( .customize-partial-edit-shortcut-button ),
+a.button:visited:not(.wc-forward):not(.add_to_cart_button):not( .customize-partial-edit-shortcut-button ),
 input[type="button"],
 input[type="reset"],
 input[type="submit"] {
@@ -31,7 +31,7 @@ input[type="submit"] {
 	padding: .75rem 0;
 	display: inline-block;
 
-	&:after:not(.customize-partial-edit-shortcut) {
+	&::after {
 		content: '\f501';
 		font-family: 'Genericons';
 		display: inline;
