--- a/.dev/sass/partials/_forms.scss
+++ b/.dev/sass/partials/_forms.scss
@@ -11,7 +11,7 @@ textarea {
 	font-family: $sans-font-family;
 }
 
-button:not(.single_add_to_cart_button):not( .customize-partial-edit-shortcut-button ),
+button:not(.single_add_to_cart_button):not(.customize-partial-edit-shortcut-button):not([class^="fl-"]),
 a.button:not(.wc-forward):not(.add_to_cart_button):not( .customize-partial-edit-shortcut-button ),
 a.button:visited:not(.wc-forward):not(.add_to_cart_button):not( .customize-partial-edit-shortcut-button ),
 input[type="button"],
@@ -27,7 +27,6 @@ input[type="submit"] {
 	font-size: rem-calc(16);
 	line-height: 1;
 	background: transparent;
-	padding: .75em 0;
 	padding: .75rem 0;
 	display: inline-block;
 
