--- a/style.css
+++ b/style.css
@@ -3098,6 +3098,20 @@ article.format-link {
     .comments-area {
       padding: 2.5em 3.5em;
       padding: 2.5rem 3.5rem; } }
+  .comments-area .comment-form-cookies-consent {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    line-height: 16px; }
+    .comments-area .comment-form-cookies-consent #wp-comment-cookies-consent {
+      display: inline;
+      width: auto;
+      margin: 0 10px 0 0; }
+      @media only screen and (max-width: 40em) {
+        .comments-area .comment-form-cookies-consent #wp-comment-cookies-consent {
+          margin-top: 2px; } }
 
 /* Comments */
 /*
@@ -3655,6 +3669,16 @@ html {
         border-color: #181818; }
     .footer-widget-area .footer-widget .widget_calendar #calendar_wrap {
       padding-right: 0; }
+
+.privacy-policy-link {
+  display: block;
+  margin-bottom: 20px;
+  line-height: 1.5;
+  text-align: center; }
+  @media only screen and (min-width: 64.063em) {
+    .privacy-policy-link {
+      text-align: left;
+      margin-bottom: 10px; } }
 
 .site-info-wrapper {
   padding: 0;
